--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "migration:run": "npx ts-node -r tsconfig-paths/register -r dotenv/config ./node_modules/typeorm/cli.js migration:run -d ./src/typeorm/data-source.ts",
     "migration:revert": "npx ts-node -r tsconfig-paths/register -r dotenv/config ./node_modules/typeorm/cli.js  migration:revert -d ./src/typeorm/data-source.ts",
     "migration:create": "npx ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:create -- ./src/typeorm/migrations/YourMigrationName",
-    "postinstall": "patch-package"
+    "depcruise": "npx tsx -e \"import config from './.dependency-cruiser.ts'; import {writeFileSync} from 'fs'; writeFileSync('.dependency-cruiser.tmp.js', 'module.exports = ' + JSON.stringify(config, null, 2) + ';')\" && dependency-cruiser --config .dependency-cruiser.tmp.js src && rm -f .dependency-cruiser.tmp.js",
+    "depcruise:graph": "npx tsx -e \"import config from './.dependency-cruiser.ts'; import {writeFileSync} from 'fs'; writeFileSync('.dependency-cruiser.tmp.js', 'module.exports = ' + JSON.stringify(config, null, 2) + ';')\" && dependency-cruiser --config .dependency-cruiser.tmp.js --output-type dot src | dot -T svg > dependency-graph.svg && rm -f .dependency-cruiser.tmp.js",
+    "postinstall": "patch-package",
+    "prepare": "husky"
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
@@ -40,6 +43,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "better-sqlite3": "^11.7.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "date-fns": "^3.6.0",
@@ -50,7 +54,6 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sqlite": "^5.1.1",
-    "better-sqlite3": "^11.7.0",
     "striptags": "^3.2.0",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.20"
@@ -66,9 +69,11 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "cross-env": "^7.0.3",
+    "dependency-cruiser": "^17.2.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "husky": "^9.1.7",
     "jest": "^29.5.0",
     "patch-package": "^8.0.1",
     "postinstall-postinstall": "^2.1.0",
@@ -79,6 +84,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.20.6",
     "typescript": "^5.1.3"
   },
   "jest": {
