--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
+    "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
@@ -86,6 +86,10 @@
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.20.6",
     "typescript": "^5.1.3"
+  },
+  "overrides": {
+    "jwa": "^2.0.0",
+    "js-yaml": "^4.1.1"
   },
   "jest": {
     "moduleFileExtensions": [
